modif method deleteVisitorAction

--- a/src/DAO/TicketingBundle/Resources/views/Payment/base.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Payment/base.html.twig
@@ -2,7 +2,7 @@
 
 {% block daoticketing_body %}
 
-<div class="well">
+<div class="well3">
 <p>Vous allez faire un paiment pour un montant de {{total}} €</p>
     <h2> Merci saisir vos informations de paiement :</h2>
 
