--- a/src/DAO/TicketingBundle/Resources/views/Payment/confirming.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Payment/confirming.html.twig
@@ -2,15 +2,13 @@
 
 
 {% block daoticketing_body %}
-<div class="well">
+<div class="well4">
     <h2>Confirmation de paiement</h2>
   </br>
   </br>
     <p> Votre commande a bien été validée, un mail de confirmation vous a été envoyé, il contiendra vos billets que vous présenterez lors de votre visite au Louvre</p>
 
     <p> Nous vous remercions pour votre commande et vous souhaitons une bonne visite</p>
-  </br>
-  </br>
   </br>
     <a href= {{path('dao_ticketing_home')}}> Retour à l'accueil</a>
 </div>
