--- a/src/DAO/TicketingBundle/Resources/views/Ticket/index.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block daoticketing_body %}
 <body>  
-  <div class="well">
+  <div class="well4">
 
 
   <p> Bienvenue sur le site de la billeterie en ligne du musée du Louvre, pour continuer cliquer sur le bouton suivant : </p>
