--- a/src/DAO/TicketingBundle/Resources/views/layout.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/layout.html.twig
@@ -31,7 +31,7 @@
 	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/interieur2.jpg') }}" alt="logo" class="img-thumbnail"/></div>
 	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreCentral.jpg') }}" alt="logo"class="img-thumbnail"/></div>
 	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/louvreTableaux.jpg') }}" alt="logo"class="img-thumbnail"/></div>
-	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/escalier2.jpg') }}" alt="logo"class="img-thumbnail"/></div>
+	        <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/escalier.jpg') }}" alt="logo"class="img-thumbnail"/></div>
         </div>
       </section>
   </head>
