--- a/src/DAO/TicketingBundle/Resources/views/layout.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/layout.html.twig
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.5.5/sweetalert2.min.css">
     <link rel="stylesheet" href="{{ asset('css/base.css') }}" />
 
-    
+    <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/logo_44.png') }}" alt="logo"class="img-thumbnail"/></div>
     <title>{% block title %}Billeterie du Louvre{% endblock %}</title>
     </section>
       <section class="row">
