--- a/layout.html.twig
+++ b/layout.html.twig
@@ -3,18 +3,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.5.5/sweetalert2.min.css">
-    <link rel="stylesheet" href="{{ asset('css/base.css') }}" />
+    {% block stylesheets %}
+      <meta charset="utf-8">    
+      <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.5.5/sweetalert2.min.css">
+      <link rel="stylesheet" href="{{ asset('CSS/base.css') }}" />
+      <link rel="stylesheet" type="text/css" media="screen and (max-width)" href="{{ asset('CSS/base.css') }}" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% endblock %}
 
     <div class="col-xs-4 col-sm-3 col-md-2"><img src="{{ asset('Images/logo_44.png') }}" alt="logo"class="img-thumbnail"/></div>
+    
     <title>{% block title %}Billeterie du Louvre{% endblock %}</title>
+    
     </section>
       <section class="row">
       
@@ -37,21 +40,29 @@
   </head>
 
   <body>
-  
+    
     {% block daoticketing_body %}
-    {% endblock %}
-  
 
+    {% for label, messages in app.flashes(['warning', 'error']) %}
+      {% for message in messages %}
+        <div class="alert alert-{{ label }}">
+            {{ message }}
+        </div>
+      {% endfor %}
+    {% endfor %}
+
+    {% endblock %}
 
   <footer>
     <p>Projet 4, Billeterie du Louvre</p>
   </footer>
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment-with-locales.min.js"></script>
     <script src="https://cdn.jsdelivr.net/sweetalert2/6.5.5/sweetalert2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
     <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
+    <script src="{{ asset('js/script.js') }}"></script>
 
     <script>
     $(document).ready(function() {
