--- a/base.css
+++ b/base.css
@@ -105,7 +105,7 @@ h2{
    color: white;  
 }
 
-h2{
+h3{
      font-size: 40px;
    color: black;  
 }
@@ -137,6 +137,7 @@ body{
      }
      h2{
           font-size:14px;
+          color: white; 
      }
      .well1{          
           font-size:10px;
@@ -150,8 +151,12 @@ body{
      .well4,p{          
           font-size:10px;
      }
-     .well4,h2{          
-          color: black;
+     
+     .well4,.titre{          
+          font-size:30px;
+     }
+     .well4{
+     height: auto;
      }
 }
 @media screen and (min-width: 691px) and (max-width: 980px)
