--- a/recapitulatif.html.twig
+++ b/recapitulatif.html.twig
@@ -4,6 +4,16 @@
 
 {% block daoticketing_body %}
 
+  {% for message in app.flashes('error') %}
+    <div class="alert alert-danger alert-dismissible" role="alert">
+      {{ message }}
+    
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  {% endfor %} 
+
 <div class="well2">
   <h3>Récapitulatif de votre commande</h3>
 
