--- a/src/DAO/TicketingBundle/Resources/views/Ticket/dating.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/dating.html.twig
@@ -5,16 +5,24 @@
 {% block daoticketing_body %}
 
 {% for message in app.flashes('error') %}
-    <div class="alert alert-error">
+    <div class="alert alert-danger alert-dismissible" role="alert">
         {{ message }}
+    
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
 {% endfor %}
 
   <h2>Choisissez votre date de visite et le nombre de billet :</h2>
 
-  {{ include("DAOTicketingBundle:Ticket:form.html.twig") }}
+  <div class="well">
 
-  {{ form_widget(form.Suivant, {'attr': {'class': 'btn btn-primary'}}) }}
+    {{ include("DAOTicketingBundle:Ticket:form.html.twig") }}
+
+    {{ form_widget(form.Suivant, {'attr': {'class': 'btn btn-primary'}}) }}
+
+  </div>
 
 {% endblock %}
 
