--- a/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig
@@ -1,47 +1,51 @@
 {# src/DAO/TicketingBundle/Resources/views/Ticket/form1.html.twig #}
 
-
-<div class="well1">
   {{ form_start(form, {'attr': {'class': 'form-horizontal'},'method': 'POST'}) }}
+  
   <div class="ticket_visitor">
+
     <div class="form-group">
-        {{ form_label(form.nom, "Nom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        <div class="col-sm-10">
+      {{ form_label(form.nom, "Nom", {'label_attr': {'class': 'col-xs-3 col-sm-3 col-md-3 control-label'}}) }}
+      <div class="col-xs-9 col-sm-9 col-md-9">
         {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
       </div>
     </div>
 
     <div class="form-group">
-        {{ form_label(form.prenom, "Prénom", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        <div class="col-sm-10">
+      {{ form_label(form.prenom, "Prénom", {'label_attr': {'class': 'col-xs-3 col-sm-3 col-md-3 control-label'}}) }}
+      <div class="col-xs-9 col-sm-9 col-md-9">
         {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
       </div>
     </div>
 
     <div class="form-group">
-        {{ form_label(form.birthDate, "Date de naissance", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        <div class="col-sm-10">
+      {{ form_label(form.birthDate, "Date de naissance", {'label_attr': {'class': 'col-xs-3 col-sm-3 col-md-3 control-label'}}) }}
+      <div class="col-xs-9 col-sm-9 col-md-9">
         {{ form_widget(form.birthDate, {'attr': {'class': 'form-control js-datepicker'}}) }}
       </div>
     </div>
 
-     <div class="form-group">
-        {{ form_label(form.pays, "Pays", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        <div class="col-sm-10">
+    <div class="form-group">
+      {{ form_label(form.pays, "Pays", {'label_attr': {'class': 'col-xs-3 col-sm-3 col-md-3 control-label'}}) }}
+      <div class="col-xs-9 col-sm-9 col-md-9">
         {{ form_widget(form.pays, {'attr': {'class': 'form-control'}}) }}
       </div>
     </div>
     
     <div class="form-group">
-        {{ form_label(form.reduced, "Tarif réduit", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        <div class="col-sm-1 col-sm-offset-8">
+      {{ form_label(form.reduced, "Tarif réduit", {'label_attr': {'class': 'col-xs-3 col-sm-3 col-md-3 control-label'}}) }}
+      <div class="col-xs-9 col-sm-9 col-md-9">
         {{ form_widget(form.reduced, {'attr': {'class': 'form-control1'}}) }}
       </div>
     </div>
 
-{{ form_end(form) }}
-    <div class="col-sm-2">
-      <input type="submit">
+    <div class="form-group">
+      <div class="col-xs-12 col-sm-12 col-md-12">
+        <input type="submit">
+      </div>
     </div>
+    
   </div>
-</div>
+
+  {{ form_end(form) }}
+
