--- a/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
+++ b/src/DAO/TicketingBundle/Resources/views/Ticket/register.html.twig
@@ -2,46 +2,64 @@
 
 {% extends "DAOTicketingBundle::layout.html.twig" %}
 
-{% block daoticketing_body %}
-  
-    <h2>Veuillez renseigner les informations des visiteurs :</h2>
-    Commande en cours pour : {{ ticket.mailVisiteur }}
-
-    {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
-
-    <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modifyModal">
-  Modifier
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="modifyModal" tabindex="-1" role="dialog" aria-labelledby="modifyModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modifyModal">Modifier</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+  {% block daoticketing_body %}
+   
+    {% for message in app.flashes('error') %}
+      <div class="alert alert-danger alert-dismissible" role="alert">
+        {{ message }}
+    
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-  
-  	<form id="edit_form" action="{{ path('dao_ticketing_modifyTicket', {'id': ticket.id}) }}" method="POST">
-      Date de visite: <input type="datetime" name="dateResa" value={{ ticket.dateResa|date("m/d/Y") }}><br/>
-      Nombre de ticket: <input type="text" name="nbTicket" value={{ ticket.nbTickets }}><br/>
-      Type de billet: <input type="radio" name="ticketType" value="0">Journée<br/>
-      <input type="radio" name="ticketType" value="1">Demi-journée<br/>
+    {% endfor %} 
+    
+    <h2>Veuillez renseigner les informations des visiteurs :</h2>
 
+    <h4>Commande en cours pour : {{ ticket.mailVisiteur }}</h4>
+    
+      <div class="well1">
+        {{ include("DAOTicketingBundle:Ticket:form1.html.twig") }}
+
+        <button type="button" id= "button-visitor" class=" col-xs-offset-9 col-xs-2 col-sm-offset-10 col-sm-1 col-md-offset-10 col-md-1 btn btn-primary" data-toggle="modal" data-target="#modifyModal">
+          Modifier
+        </button>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-        <input type="submit" class="btn btn-primary">
+
+    <!-- Modal -->
+    <div class="modal fade" id="modifyModal" tabindex="-1" role="dialog" aria-labelledby="modifyModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        
+          <div class="modal-header">
+            <h5 class="modal-title text-center" id="modifyModal">Modifier</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div class="modal-body">
+  	      <form id="edit_form" action="{{ path('dao_ticketing_modifyTicket', {'id': ticket.id}) }}" method="POST">
+              Date de visite: <input type="datetime" name="dateResa" value={{ ticket.dateResa|date("m/d/Y") }}><br/>
+              Nombre de ticket: <input type="text" name="nbTicket" value={{ ticket.nbTickets }}><br/>
+              Type de billet: <input type="radio" name="ticketType" value="1">Journée
+              <input type="radio" name="ticketType" value="0">Demi-journée
+              <br/>   
+
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+            <input type="submit" class="btn btn-primary">
+          </div>
+          </form>
+        </div>
       </div>
-      </form>
     </div>
-  </div>
-</div>
+  {% endblock %}
 
-{% endblock %}
-
-
+    {% block javascripts %}
+$('input[type="radio"]').on('click change', function(e) {
+    console.log(e.type);
+});
+{% endblock %} 
