--- a/web/CSS/base.css
+++ b/web/CSS/base.css
@@ -1,3 +1,4 @@
+
 /*-----for border----*/
 .well{
 	font-family:Roboto,sans-serif;
@@ -11,7 +12,7 @@
      box-shadow: 2px 5px 5px 0px #eee;
      max-width: 80%;
      padding-top: 10px;
-     height: 180px;
+     height: 190px;
      margin-top: 20px;
 }
 
@@ -27,7 +28,7 @@
      box-shadow: 2px 5px 5px 0px #eee;
      max-width: 90%;
      padding-top: 10px;
-     height: 200px;
+     height: 240px;
      margin-top: 20px;
 }
 
@@ -42,7 +43,7 @@
      box-shadow: 2px 5px 5px 0px #eee;
      max-width: 80%;
      padding-top: 10px;
-     height: 270px;
+     height: auto;
      margin-top: 20px;
      padding-left: 50px;
 }
@@ -58,7 +59,7 @@
      box-shadow: 2px 5px 5px 0px #eee;
      max-width: 80%;
      padding-top: 10px;
-     height: 170px;
+     height: auto;
      margin-top: 20px;
      padding-left: 50px;
 }
@@ -75,7 +76,7 @@
      box-shadow: 2px 5px 5px 0px white;
      max-width: 80%;
      padding-top: 10px;
-     height: 240px;
+     height: auto;
      margin-top: 20px;
 }
 
@@ -83,13 +84,34 @@
 	height: 10px;
 }
 
+.ticket-list .panel-heading {
+    background-color:#CECECE;
+    border-bottom: none;
+}
+.ticket-list .panel-body {
+    background-color:#CECECE;
+}
+.ticket-list .table-head{
+    border: none;  
+}
+
 h1{
-	font-size: 80px;
+	font-size: 60px;
      color: white;
 }
 
 h2{
+     font-size: 40px;
    color: white;  
+}
+
+h3{
+     font-size: 40px;
+   color: black;  
+}
+
+h4{
+   color: white!important;  
 }
 
 body{
@@ -98,8 +120,67 @@ body{
 
 #images{
 	background-color: #DEE8E7;
+     height: auto;
 }
 
 .form-control{
-width: 90%;
+     width: 90%;     
+}
+
+@media screen and (max-width: 690px)
+{
+    .well{          
+          font-size:9px;
+     }
+     h1{
+          font-size:20px;
+     }
+     h2{
+          font-size:14px;
+          color: white; 
+     }
+     .well1{          
+          font-size:10px;
+     }
+     .well2{          
+          font-size:10px;
+     }
+     .btn{
+          font-size:8px;
+     }
+     .well4,p{          
+          font-size:10px;
+     }
+     
+     .well4,.titre{          
+          font-size:30px;
+     }
+     .well4{
+     height: auto;
+     }
+}
+@media screen and (min-width: 691px) and (max-width: 980px)
+{
+    .well{
+          font-family:Roboto,sans-serif;
+            background-color : #CECECE;
+          
+          font-size:12px;
+          border-style: 1px solid grey;
+          margin: 0 auto;
+          text-align: center;
+          opacity: 0.8;
+          margin-top: 67px;
+          box-shadow: 2px 5px 5px 0px #eee;
+          max-width: 80%;
+          padding-top: 10px;
+          height: 180px;
+          margin-top: 20px;
+     }
+     h1{
+          font-size:24px;
+     }
+     h2{
+          font-size:16px;
+     }
 }
